--- a/0x02-i18n/translations/en/LC_MESSAGES/messages.po
+++ b/0x02-i18n/translations/en/LC_MESSAGES/messages.po
@@ -18,28 +18,17 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.11.0\n"
 
-#: templates/3-index.html:7 templates/4-index.html:7 templates/5-index.html:7
-#: templates/6-index.html:7 templates/7-index.html:6 templates/index.html:6
 msgid "home_title"
-msgstr ""
+msgstr "Welcome to Holberton"
 
-#: templates/3-index.html:10 templates/4-index.html:10
-#: templates/5-index.html:10 templates/6-index.html:10 templates/7-index.html:9
-#: templates/index.html:9
 msgid "home_header"
-msgstr ""
+msgstr "Hello world!"
 
-#: templates/5-index.html:12 templates/6-index.html:12
-#: templates/7-index.html:11 templates/index.html:11
 msgid "logged_in_as"
-msgstr ""
+msgstr "You are logged in as %(username)s."
 
-#: templates/5-index.html:14 templates/6-index.html:14
-#: templates/7-index.html:13 templates/index.html:13
 msgid "not_logged_in"
-msgstr ""
+msgstr "You are not logged in."
 
-#: templates/index.html:16
 msgid "current_time_is"
-msgstr ""
-
+msgstr "The current time is %(current_time)s."
